--- a/templates/actors/dialogs/pantheon.html
+++ b/templates/actors/dialogs/pantheon.html
@@ -29,7 +29,7 @@
             </div>
             <div class="pantheon-virtues">
               {{#splitInColumns pantheon.virtues 2 'pantheon-virtue-item'}}
-              <div class="pantheon-virtue-item-row">{{key}}</div>
+              <div class="pantheon-virtue-item-row">{{data.name}}</div>
               {{/splitInColumns}}
             </div>
             <div class="description-label">
