update: updating items about roll system

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -52,8 +52,7 @@
                   data-action="update-birthright-description"
                   data-field="description"
                   data-index="{{index}}"
-                >
-{{{birthright.description}}}</textarea
+                >{{{birthright.description}}}</textarea
                 >
                 {{#if (hasOwnProperty birthright "boons")}}
                 <div
