update: armor field updated

--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -260,7 +260,7 @@
             <span>A</span>
             <input
               type="text"
-              data-field="aggravated"
+              data-field="Aggravated"
               data-action="armor-update"
               value="{{system.combat.armor.Aggravated.value}}"
             />
@@ -268,13 +268,13 @@
           <div class="lethal">
             <span>L</span>
             <input type="text"               
-              data-field="lethal"
+              data-field="Lethal"
               data-action="armor-update" value="{{system.combat.armor.Lethal.value}}" />
           </div>
           <div class="bashing">
             <span>B</span>
             <input type="text"               
-              data-field="bashing"
+              data-field="Bashing"
               data-action="armor-update" value="{{system.combat.armor.Bashing.value}}" />
           </div>
         </div>
