--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -1,117 +1,48 @@
-<div class="{{cssClass}} {{actor.type}} scion-wrapper">
-  {{!-- Actor Header --}}
+<div class="scion-wrapper"> {{!-- Actor Header --}}
   <div class="scion-header">
     <h1>HERO</h1>
   </div>
 
-  {{!-- Character Sheet Template for Foundry VTT --}}
-  <form class="scion-form" autocomplete="off">
-    <div class="profile-image">
-      <img
-        class="profile"
-        src="{{actor.img}}"
-        data-edit="img"
-        title="{{actor.name}}"
-        width="135"
-        height="135"
-      />
+  {{!-- Removi a tag <form> manual. O root já é um form. --}}
+  <div class="profile-image">
+    <img class="profile" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" width="135" height="135" />
+  </div>
+
+  <header class="sheet-header">
+     </header>
+
+  {{!-- Navegação de Abas --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    {{!-- data-action="setTab" é o segredo aqui --}}
+    <a class="item {{#if (eq tabs.primary 'stats')}}active{{/if}}" 
+       data-action="setTab" data-group="primary" data-tab="stats">Attributes & Abilities</a>
+    
+    <a class="item {{#if (eq tabs.primary 'birth')}}active{{/if}}" 
+       data-action="setTab" data-group="primary" data-tab="birth">Birthrights & Virtues</a>
+    
+    <a class="item {{#if (eq tabs.primary 'knacks')}}active{{/if}}" 
+       data-action="setTab" data-group="primary" data-tab="knacks">Knacks & Boons</a>
+    
+    <a class="item {{#if (eq tabs.primary 'combat')}}active{{/if}}" 
+       data-action="setTab" data-group="primary" data-tab="combat">Combat</a>
+  </nav>
+
+  {{!-- Conteúdo das Abas --}}
+  <section class="sheet-content">
+    <div class="tab {{#if (eq tabs.primary 'stats')}}active{{/if}}" data-group="primary" data-tab="stats">
+      {{> "systems/scion-foundry-v2/templates/actors/partials/stats.html"}}
     </div>
-    <header class="sheet-header">
-      <div class="column">
-        <div class="row">
-          <label for="name">Name</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            value="{{actor.name}}"
-            placeholder=""
-          />
-        </div>
-        <div class="row">
-          <label for="player">Player</label>
-          <input
-            type="text"
-            id="player"
-            name="system.player"
-            value="{{#if system.player}}{{system.player}}{{else}}{{currentUserName}}{{/if}}"
-            placeholder=""
-          />
-        </div>
-      </div>
-      <div class="column">
-        <div class="row">
-          <label for="calling">Calling</label>
-          <input
-            type="text"
-            id="calling"
-            name="system.calling"
-            value="{{system.calling}}"
-            placeholder=""
-          />
-        </div>
-        <div class="row">
-          <label for="nature">Nature</label>
-          <input
-            type="text"
-            id="nature"
-            name="system.nature"
-            value="{{system.nature}}"
-            placeholder=""
-          />
-        </div>
-      </div>
-      <div class="column">
-        <div class="row">
-          <label for="pantheon">Pantheon</label>
-          <button
-            type="button"
-            class="scion-pantheon-button"
-            data-action="select-pantheon"
-          >
-            <span>{{system.pantheon.name}}</span>
-            {{#if system.pantheon.logo}}
-            <img src="{{system.pantheon.logo}}" alt="pantheon logo" />
-            {{/if}}
-          </button>
-        </div>
-        <div class="row">
-          <label for="god">God</label>
-          <button
-            type="button"
-            class="scion-pantheon-button"
-            data-action="select-god"
-          >
-            <span>{{system.pantheon.god}}</span>
-          </button>
-        </div>
-      </div>
-    </header>
-    <nav class="sheet-tabs tabs">
-      <a class="item active" data-group="primary" data-tab="stats"
-        >Attributes & Abilities</a
-      >
-      <a class="item" data-group="primary" data-tab="birth"
-        >Birthrights & Virtues</a
-      >
-      <a class="item" data-group="primary" data-tab="knacks">Knacks & Boons</a>
-      <a class="item" data-group="primary" data-tab="combat">Combat</a>
-    </nav>
-    <section class="sheet-content">
-      <div class="tab active" data-group="primary" data-tab="stats">
-        {{> "systems/scion-foundry-v2/templates/actors/partials/stats.html"}}
-      </div>
-      <div class="tab" data-group="primary" data-tab="birth">
-        {{>
-        "systems/scion-foundry-v2/templates/actors/partials/birth-virtues.html"}}
-      </div>
-      <div class="tab" data-group="primary" data-tab="knacks">
-        {{>
-        "systems/scion-foundry-v2/templates/actors/partials/knacks-boons.html"}}
-      </div>
-      <div class="tab" data-group="primary" data-tab="combat">
-        {{> "systems/scion-foundry-v2/templates/actors/partials/combat.html"}}
-      </div>
-    </section>
-  </form>
+
+    <div class="tab {{#if (eq tabs.primary 'birth')}}active{{/if}}" data-group="primary" data-tab="birth">
+      {{> "systems/scion-foundry-v2/templates/actors/partials/birth-virtues.html"}}
+    </div>
+
+    <div class="tab {{#if (eq tabs.primary 'knacks')}}active{{/if}}" data-group="primary" data-tab="knacks">
+      {{> "systems/scion-foundry-v2/templates/actors/partials/knacks-boons.html"}}
+    </div>
+
+    <div class="tab {{#if (eq tabs.primary 'combat')}}active{{/if}}" data-group="primary" data-tab="combat">
+      {{> "systems/scion-foundry-v2/templates/actors/partials/combat.html"}}
+    </div>
+  </section>
 </div>
