--- a/templates/journals/knacks.html
+++ b/templates/journals/knacks.html
@@ -1,4 +1,4 @@
-<section class="knacks-section">
+<section class="knacks-section knack-journal-entry-content">
   <div class="knack-wrapper-list">
     {{#each knackItem.knacks as |knack|}}
     <h2>{{knack.name}}</h2>
