--- a/templates/journals/purviews.html
+++ b/templates/journals/purviews.html
@@ -1,4 +1,4 @@
-<section class="purviews-section">
+<section class="purviews-section purview-journal-entry-content">
   <h2>Description</h2>
   <div class="purviews-wrapper">
     <div class="purviews-description">
