--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -1,4 +1,4 @@
-<div class="scion-wrapper"> {{!-- Actor Header --}}
+<div class="scion-wrapper scrollable" id="scion-sheet-{{actor.id}}"> {{!-- Actor Header --}}
   <header class="sheet-header">
     <div class="scion-header">
       <h1>HERO</h1>
