update: updating itens from character sheet

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -6,7 +6,7 @@
 
     {{!-- Removi a tag <form> manual. O root já é um form. --}}
     <div class="profile-image">
-      <img class="profile" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" width="135" height="135" />
+      <img class="profile" src="{{actor.img}}" data-action="editImage" data-edit="img" title="{{actor.name}}" width="135" height="135" />
     </div>
 
     <div class="sheet-header-character-info">
