update: updating itens from character sheet

--- a/templates/actors/partials/stats.html
+++ b/templates/actors/partials/stats.html
@@ -60,7 +60,7 @@
         <div class="skills-row">
           <input type="checkbox" class="square-checkbox" {{#if
           data.favored}}checked{{/if}} />
-          <div data-action="roll-abilitie" data-key="{{key}}">
+          <div data-action="roll-ability" data-key="{{key}}">
             <span>{{key}}</span>
           </div>
         </div>
