update: updating itens from character sheet

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -71,6 +71,7 @@
               id="pantheon"
               name="system.pantheon.name"
               value="{{system.pantheon.name}}"
+              data-action="update-pantheon-name"
               placeholder=""
             />
             {{#if system.pantheon.logo}}
@@ -100,6 +101,7 @@
               id="god"
               name="system.pantheon.god"
               value="{{system.pantheon.god}}"
+              data-action="update-pantheon-god"
               placeholder=""
             />
           </div>
