update: updating itens from character sheet

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -71,6 +71,7 @@
               id="pantheon"
               name="system.pantheon.name"
               value="{{system.pantheon.name}}"
+              data-field="name"
               data-action="update-pantheon-name"
               placeholder=""
             />
@@ -79,11 +80,6 @@
                 <img src="{{system.pantheon.logo}}" alt="pantheon logo" />
               </div>
             {{/if}}
-            <ul class="pantheon-list-items">
-              <li>Option 1</li>
-              <li>Option 2</li>
-              <li>Option 3</li>
-            </ul>
           </div>
           <button
             type="button"
