--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -1,3 +1,5 @@
+
+<div class="tab {{#if (eq tabs.primary 'birth')}}active{{/if}}">
 <div class="birth">
   <div class="scion-label-title">
     <h2>Birthrights</h2>
@@ -164,4 +166,5 @@
     </div>
     {{/each}}
   </section>
+</div>
 </div>
