--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -1,3 +1,5 @@
+
+<div class="tab {{#if (eq tabs.primary 'combat')}}active{{/if}}">
 <div class="weapons">
   <div class="scion-label-title">
     <h2>Weapons</h2>
@@ -331,4 +333,5 @@
     <h2>Experience</h2>
   </div>
   <input type="text" data-action="update-xp" value="{{system.experience.value}}">
+</div>
 </div>
