--- a/templates/actors/partials/knacks-boons.html
+++ b/templates/actors/partials/knacks-boons.html
@@ -1,3 +1,5 @@
+
+<div class="tab {{#if (eq tabs.primary 'knacks')}}active{{/if}}">
 <div class="knacks">
   <div class="scion-label-title">
     <h2>Knacks</h2>
@@ -118,4 +120,5 @@
     </div>
     <button data-action="button-boon-add">Add Boon</button>
   </div>
+</div>
 </div>
