--- a/templates/actors/partials/stats.html
+++ b/templates/actors/partials/stats.html
@@ -1,3 +1,4 @@
+<div class="tab {{#if (eq tabs.primary 'stats')}}active{{/if}}">
 <div class="attributes">
   <div class="scion-label-title">
     <h2>Attributes</h2>
@@ -82,3 +83,5 @@
     {{/splitInColumns}}
   </div>
 </div>
+</div>
+
