--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -1,150 +1,14 @@
-<div class="scion-wrapper scrollable" id="scion-sheet-{{actor.id}}"> {{!-- Actor Header --}}
-  <header class="sheet-header">
-    <div class="scion-header">
-      <h1>HERO</h1>
-    </div>
+<div class="scion-wrapper scrollable" style="height: 100%;" id="scion-sheet-{{actor.id}}"> {{!-- Actor Header --}}
+{{!-- Parte do Header --}}
+  <section data-application-part="header">
+    {{!-- O conteúdo aqui virá do template parcial do header --}}
+  </section>
 
-    {{!-- Removi a tag <form> manual. O root já é um form. --}}
-    <div class="profile-image">
-      <img class="profile" src="{{actor.img}}" data-action="editImage" data-edit="img" title="{{actor.name}}" width="135" height="135" />
-    </div>
-
-    <div class="sheet-header-character-info">
-      <div class="column">
-        <div class="row">
-          <div class="column">
-            <label for="name">Name</label>
-            <input
-            type="text"
-            id="name"
-            name="name"
-            value="{{actor.name}}"
-            placeholder=""
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="column">
-            <label for="player">Player</label>
-            <input
-              type="text"
-              id="player"
-              name="system.player"
-              value="{{#if system.player}}{{system.player}}{{else}}{{currentUserName}}{{/if}}"
-              placeholder=""
-            />
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="row">
-          <div class="column">
-            <label for="calling">Calling</label>
-            <input
-              type="text"
-              id="calling"
-              name="system.calling"
-              value="{{system.calling}}"
-              placeholder=""
-          />
-          </div>
-        </div>
-        <div class="row">
-          <div class="column">
-            <label for="nature">Nature</label>
-            <input
-              type="text"
-              id="nature"
-              name="system.nature"
-              value="{{system.nature}}"
-              placeholder=""
-            />
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="row">
-          <div class="column">
-            <label for="pantheon">Pantheon</label>
-            <input
-              type="text"
-              id="pantheon"
-              name="system.pantheon.name"
-              value="{{system.pantheon.name}}"
-              data-field="name"
-              data-action="update-pantheon-name"
-              placeholder=""
-            />
-            {{#if system.pantheon.logo}}
-              <div class="pantheon-image">          
-                <img src="{{system.pantheon.logo}}" alt="pantheon logo" />
-              </div>
-            {{/if}}
-          </div>
-          <button
-            type="button"
-            class="scion-pantheon-button"
-            data-action="select-pantheon"
-          >
-            <i class="fa fa-book" aria-hidden="true"></i>
-          </button>
-        </div>
-        <div class="row">
-          <div class="column">
-            <label for="god">God</label>
-            <input
-              type="text"
-              id="god"
-              name="system.pantheon.god"
-              value="{{system.pantheon.god}}"
-              data-action="update-pantheon-god"
-              placeholder=""
-            />
-          </div>
-          <button
-            type="button"
-            class="scion-pantheon-button"
-            data-action="select-god"
-          >
-            <i class="fa fa-book" aria-hidden="true"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    {{!-- Navegação de Abas --}}
-    <nav class="sheet-tabs tabs" data-group="primary">
-      {{!-- data-action="setTab" é o segredo aqui --}}
-      <a class="item {{#if (eq tabs.primary 'stats')}}active{{/if}}" 
-        data-action="setTab" data-group="primary" data-tab="stats">Attributes & Abilities</a>
-      
-      <a class="item {{#if (eq tabs.primary 'birth')}}active{{/if}}" 
-        data-action="setTab" data-group="primary" data-tab="birth">Birthrights & Virtues</a>
-      
-      <a class="item {{#if (eq tabs.primary 'knacks')}}active{{/if}}" 
-        data-action="setTab" data-group="primary" data-tab="knacks">Knacks & Boons</a>
-      
-      <a class="item {{#if (eq tabs.primary 'combat')}}active{{/if}}" 
-        data-action="setTab" data-group="primary" data-tab="combat">Combat</a>
-    </nav>
-  </header>
-  
   {{!-- Conteúdo das Abas --}}
   <section class="sheet-content">
-    <div class="tab {{#if (eq tabs.primary 'stats')}}active{{/if}}" data-group="primary" data-tab="stats">
-      {{> "systems/scion-foundry-v2/templates/actors/partials/stats.html"}}
-    </div>
-
-    <div class="tab {{#if (eq tabs.primary 'birth')}}active{{/if}}" data-group="primary" data-tab="birth">
-      {{> "systems/scion-foundry-v2/templates/actors/partials/birth-virtues.html"}}
-    </div>
-
-    <div class="tab {{#if (eq tabs.primary 'knacks')}}active{{/if}}" data-group="primary" data-tab="knacks">
-      {{> "systems/scion-foundry-v2/templates/actors/partials/knacks-boons.html"}}
-    </div>
-
-    <div class="tab {{#if (eq tabs.primary 'combat')}}active{{/if}}" data-group="primary" data-tab="combat">
-      {{> "systems/scion-foundry-v2/templates/actors/partials/combat.html"}}
-    </div>
+    <section data-application-part="stats"></section>
+    <section data-application-part="birth"></section>
+    <section data-application-part="knacks"></section>
+    <section data-application-part="combat"></section>
   </section>
 </div>
