update: updating itens from character sheet

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -1,4 +1,4 @@
-<div class="scion-wrapper scrollable" style="height: 100%;" id="scion-sheet-{{actor.id}}"> {{!-- Actor Header --}}
+<div class="scion-wrapper scrollable"id="scion-sheet-{{actor.id}}">
 {{!-- Parte do Header --}}
   <section data-application-part="header">
     {{!-- O conteúdo aqui virá do template parcial do header --}}
